
@startuml Hermes Deployment Services
' ---------------- Main Models ----------------
class User {
    +id: AutoField
    +name: CharField
    +email: CharField
    +password: hash
}

class Server {
    +id: AutoField
    +user: User
    
    +name: CharField
    +email: CharField
    +region: CharField
    +ssh_key: CharField
    ' +on: ServerStatus
}

class App {
    +id: AutoField
    +name: CharField
    +domain: CharField
    
    +locations: List<AppLocation>
    +image: Image
}

class AppLocation {
    +id: AutoField
    +server: Server
    +port: IntegerField
}

class Image {
    +id: AutoField
    +name: CharField
    +url: CharField
    +repository: Repository
    +branch: CharField
}

class Repository {
    +id: AutoField
    +name: CharField
    +url: CharField
    +enVals: List<EnvVar>
}

class EnvVar{
    +id: AutoField
    +name: CharField
    +value: CharField
}


' ---------------- Relationships ----------------
User "1" -- "*" Server
Server "*" -- "*" App

App "1" -- "1" Image
App "1" -- "*" AppLocation
Image "1" -- "1" Repository

Repository "1" -- "*" EnvVar

@enduml
